# whagons_assistant_client

./: .gitignore  DEPLOYMENT.md  README.md  config.example.yaml  index.html  nca.Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  whagons.Dockerfile  whagons5-widget.Dockerfile
backend/: .gitignore  DBManager_MIGRATION.md  Dockerfile  Makefile  bearer.txt  check_mfa.py  emails.py  enforce_mfa.py  get_bearer_token.py  index.py  migrate.py  migrate_workflows.py  nca.Dockerfile  nca_sf_searcher_teams_full.xlsx  pyproject.toml  searcher_teams.csv  test.json  test.py  test.xlsx  test_empty_search.py  test_error_logging.py  test_search_logic.py  test_workflows.py  uploadthing_response.json  whagons.Dockerfile
backend/ai/: Manager.py  Manager_new.py  __init__.py  models.py  old_prompts.tx  workflow_context.py  workflow_scheduler.py  wrapper.py
backend/database/: __init__.py  models.py
backend/db/: .gitignore  __init__.py  history.db  models.py
backend/error_logger/: error_logger.py
backend/helpers/: Firebase_helpers.py  RequestHelper.py  __init__.py  helper_funcs.py
backend/knowledge_base/: mem0_loading_state.json  save_group_mem.py  schema_to_db.py  split.py
backend/lib/: Agent.py
backend/migrations/: migrate.py
backend/misc_scripts/: count.py  decrypt.py  get_bearer_token.py  non_enabled.json  recipients.json  setup.py
backend/models/: api.py  chat_models.py  general.py
backend/prompts/: language_instructions.md
backend/pydantic_ai/: _agent_graph.py  _parts_manager.py  messages.py
backend/routes/: chat_events.py  chats_router.py  conversations_router.py  files_router.py  local_files_router.py  user_routes.py  workflows_router.py
backend/saved_workflows/: check_mfa.py  whitelist.py  zcheckwhitelist.py
backend/scripts/: add_deals_folders.py  backfill_conversation_models.py  deal_users.json  legal_users.json  manage_teams_channels.py
(+318 files in other folders)
