[project]
name = "microsoft-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-ai-slim[tavily]>=0.0.49",
    "pydantic-ai[logfire]>=0.0.49",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]
